--- a/index.html
+++ b/index.html
@@ -234,15 +234,13 @@ function openTab(tab){
 
 function showDetail(day){
     const details = {
-    1: `<div class="detail-day">
-        <!-- Day 1 content unchanged -->
-        </div>`,
+1: `<!-- Day 1 內容保持不變 -->`,
 
     2: `<div class="detail-day">
         <div class="weather-box"><strong>1月31日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，輕雪，浪漫小樽日</div>
         <div class="snow-box"><strong>即時雪況：</strong> 小樽運河積雪 50 cm，雪景浪漫（來源：Otaru旅遊網）</div>
         <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/10/00/a1000055/img/basic/a1000055_main.jpg?20210222182701&q=80" class="hero-img" alt="小樽運河">
-        <h2>Day 2　小樽運河浪漫一日</h2>
+        <h2>Day 2　小樽運河&天狗山展望台浪漫一日</h2>
         <div class="step"><span class="time">10:00</span>　從Airbnb出發前往小樽（JR快速，約35分鐘）</div>
         <div class="step"><span class="time">10:45</span>　抵達後參觀船見阪（經典陡坡雪景）</div>
         <div class="step"><span class="time">11:00</span>　三角市場用午餐（新鮮海鮮丼或壽司）</div>
@@ -261,7 +259,7 @@ function showDetail(day){
             <ul>
                 <li>Coffee House CHAFF (開門時間：12pm-6pm) <a href="https://tabelog.com/tw/hokkaido/A0106/A010601/1055275/" target="_blank">連結</a></li>
                 <li>小樽芸術村ミュージアムカフェ (開門時間：10:30am-4pm) <a href="https://tabelog.com/hokkaido/A0106/A010601/1075407/" target="_blank">連結</a></li>
-                <li>COFFEE STAND MORAN (開門時間：10am-6pm) <a href="https://tabelog.com/en/hokkaido/A0106/A010601/1078050/" target="_blank"連結</a></li>
+                <li>COFFEE STAND MORAN (開門時間：10am-6pm) <a href="https://tabelog.com/en/hokkaido/A0106/A010601/1078050/" target="_blank">連結</a></li>
                 <li>れんげ洞 (開門時間：1pm-9pm) <a href="https://tabelog.com/hokkaido/A0106/A010601/1015571/" target="_blank">連結</a></li>
                 <li>Cat Cafe-Meow Legend (開門時間：10:30am-6pm) <a href="https://tabelog.com/hokkaido/A0106/A010601/1081528/" target="_blank">連結</a></li>
             </ul>
@@ -274,8 +272,8 @@ function showDetail(day){
         </div>
 
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/d/embed?mid=1aa3IQopL4TxQEOb3LHGkBDDQ3VE&ehbc=2E312F" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map-embed"></iframe>
-            <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;text-align:center;">小樽觀光地圖（包含行程點及推薦咖啡店/商店）</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.200000000000!2d140.990000!3d43.190000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b29a5e5e5e5e5%3A0xe5e5e5e5e5e5e5e5!2sOtaru%2C%20Hokkaido!5e0!3m2!1szh-HK!2shk!4v1730000000000&z=14&markers=color:pink%7Clabel:1%7C43.198,140.995%7Ccolor:pink%7Clabel:2%7C43.191,141.000%7Ccolor:pink%7Clabel:3%7C43.198,141.002%7Ccolor:pink%7Clabel:4%7C43.195,141.001%7Ccolor:pink%7Clabel:5%7C43.194,141.001%7Ccolor:pink%7Clabel:6%7C43.180,140.990%7Ccolor:pink%7Clabel:7%7C43.198,141.001%7Ccolor:pink%7Clabel:8%7C43.197,141.001%7Ccolor:pink%7Clabel:C1%7C43.198,141.002%7Ccolor:pink%7Clabel:C2%7C43.196,141.001%7Ccolor:pink%7Clabel:C3%7C43.194,141.001%7Ccolor:pink%7Clabel:C4%7C43.195,141.001%7Ccolor:pink%7Clabel:C5%7C43.196,141.001%7Ccolor:pink%7Clabel:S1%7C43.195,141.001%7Ccolor:pink%7Clabel:S2%7C43.195,141.001%7Ccolor:pink%7Clabel:S3%7C43.195,141.001" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;text-align:center;">Day 2 小樽浪漫地圖（標記所有行程點、咖啡店及商店，粉紅色標記更浪漫♡）</p>
         </div>
         </div>`,
         
