--- a/index.html
+++ b/index.html
@@ -253,37 +253,36 @@ function showDetail(day){
         <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/10/00/a1000055/img/basic/a1000055_main.jpg?20210222182701&q=80" class="hero-img" alt="小樽運河">
         <h2>Day 2　小樽運河&天狗山展望台浪漫一日</h2>
         <div class="step"><span class="time">10:00</span>　從Airbnb出發前往小樽（JR快速，約35分鐘）</div>
-        <div class="step"><span class="time">10:45</span>　抵達後參觀船見阪（經典陡坡雪景）</div>
-        <div class="step"><span class="time">11:00</span>　三角市場用午餐（新鮮海鮮丼或壽司）</div>
-        <div class="step"><span class="time">12:00</span>　前往堺町通商店街自由逛街</div>
-        <div class="step"><span class="time">13:30</span>　LeTAO本店（雙層起司蛋糕 + 買手信）</div>
-        <div class="step"><span class="time">14:30</span>　搭纜車上天狗山展望台（俯瞰小樽全景）</div>
-        <div class="step"><span class="time">17:30</span>　下山返回小樽運河散步</div>
-        <div class="step"><span class="time">18:30</span>　<span class="meal">晚餐：小樽世壺屋（高級懷石，需預約）</span></div>
+        <div class="step"><span class="time">10:45</span>　抵達後參觀 <a href="https://www.google.com/maps/search/?api=1&query=船見阪+Otaru" target="_blank">船見阪</a>（經典陡坡雪景）</div>
+        <div class="step"><span class="time">11:00</span>　<a href="https://www.google.com/maps/search/?api=1&query=三角市場+Otaru" target="_blank">三角市場</a> 用午餐（新鮮海鮮丼或壽司）</div>
+        <div class="step"><span class="time">12:00</span>　前往 <a href="https://www.google.com/maps/search/?api=1&query=堺町通商店街+Otaru" target="_blank">堺町通商店街</a> 自由逛街</div>
+        <div class="step"><span class="time">13:30</span>　<a href="https://www.google.com/maps/search/?api=1&query=LeTAO+Otaru" target="_blank">LeTAO本店</a>（雙層起司蛋糕 + 買手信）</div>
+        <div class="step"><span class="time">14:30</span>　搭纜車上 <a href="https://www.google.com/maps/search/?api=1&query=天狗山展望台+Otaru" target="_blank">天狗山展望台</a>（俯瞰小樽全景）</div>
+        <div class="step"><span class="time">17:30</span>　下山返回 <a href="https://www.google.com/maps/search/?api=1&query=小樽運河" target="_blank">小樽運河</a> 散步</div>
+        <div class="step"><span class="time">18:30</span>　<span class="meal">晚餐：<a href="https://www.google.com/maps/search/?api=1&query=小樽世壺屋" target="_blank">小樽世壺屋</a>（高級懷石，需預約）</span></div>
         <div class="step"><span class="time">20:00</span>　搭JR返回Airbnb</div>
         <a href="https://tabelog.com/tw/hokkaido/A0106/A010601/1070911/" target="_blank" class="ticket-link">世壺屋預約（強烈建議提前1個月）</a>
-        <a href="https://www.klook.com/zh-HK/activity/10998-otaru-day-tour-from-sapporo/" target="_blank" class="ticket-link">Klook 小樽一日遊套票</a>
         <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Station" target="_blank" class="location-link">札幌 → 小樽路線</a></div>
 
         <div class="place-list">
             <h3>咖啡店（堺町通商店街附近推薦）</h3>
             <ul>
-                <li>Coffee House CHAFF (開門時間：12pm-6pm) <a href="https://tabelog.com/tw/hokkaido/A0106/A010601/1055275/" target="_blank">連結</a></li>
-                <li>小樽芸術村ミュージアムカフェ (開門時間：10:30am-4pm) <a href="https://tabelog.com/hokkaido/A0106/A010601/1075407/" target="_blank">連結</a></li>
-                <li>COFFEE STAND MORAN (開門時間：10am-6pm) <a href="https://tabelog.com/en/hokkaido/A0106/A010601/1078050/" target="_blank">連結</a></li>
-                <li>れんげ洞 (開門時間：1pm-9pm) <a href="https://tabelog.com/hokkaido/A0106/A010601/1015571/" target="_blank">連結</a></li>
-                <li>Cat Cafe-Meow Legend (開門時間：10:30am-6pm) <a href="https://tabelog.com/hokkaido/A0106/A010601/1081528/" target="_blank">連結</a></li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=Coffee+House+CHAFF+Otaru" target="_blank">Coffee House CHAFF</a> (開門時間：12pm-6pm)</li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=小樽芸術村ミュージアムカフェ" target="_blank">小樽芸術村ミュージアムカフェ</a> (開門時間：10:30am-4pm)</li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=COFFEE+STAND+MORAN+Otaru" target="_blank">COFFEE STAND MORAN</a> (開門時間：10am-6pm)</li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=れんげ洞+Otaru" target="_blank">れんげ洞</a> (開門時間：1pm-9pm)</li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=Cat+Cafe+Meow+Legend+Otaru" target="_blank">Cat Cafe-Meow Legend</a> (開門時間：10:30am-6pm)</li>
             </ul>
             <h3>商店（堺町通商店街附近推薦）</h3>
             <ul>
-                <li>イメージ・グラス (開門時間：10:30am-4:30pm) <a href="https://image-glass.com/" target="_blank">連結</a></li>
-                <li>Unga Plus (開門時間：10am-6pm) <a href="https://unga-plus.com/" target="_blank">連結</a></li>
-                <li>硝子と雑貨のお店 ゆず工房</li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=イメージ・グラス+Otaru" target="_blank">イメージ・グラス</a> (開門時間：10:30am-4:30pm)</li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=Unga+Plus+Otaru" target="_blank">Unga Plus</a> (開門時間：10am-6pm)</li>
+                <li><a href="https://www.google.com/maps/search/?api=1&query=硝子と雑貨のお店+ゆず工房+Otaru" target="_blank">硝子と雑貨のお店 ゆず工房</a></li>
             </ul>
         </div>
 
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.5!2d140.995!3d43.195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b29c0c5c5c5c5%3A0xc5c5c5c5c5c5c5c5!2sOtaru+Canal!5e0!3m2!1szh-HK!2shk!4v1730000000000&markers=color:0xFF69B4%7Clabel:T天狗山%7C43.1755,140.975!markers=color:0xFF69B4%7Clabel:F船見阪%7C43.199,140.999!markers=color:0xFF69B4%7Clabel:三角市場%7C43.1995,140.999!markers=color:0xFF69B4%7Clabel:堺町通%7C43.195,141.001!markers=color:0xFF69B4%7Clabel:LeTAO%7C43.1914,141.0074!markers=color:0xFF69B4%7Clabel:運河%7C43.198,141.001!markers=color:0xFF69B4%7Clabel:世壺屋%7C43.197,141.001!markers=color:0xFF69B4%7Clabel:CHAFF%7C43.199,140.998!markers=color:0xFF69B4%7Clabel:芸術村カフェ%7C43.193,141.002!markers=color:0xFF69B4%7Clabel:MORAN%7C43.194,141.001!markers=color:0xFF69B4%7Clabel:れんげ洞%7C43.195,141.001!markers=color:0xFF69B4%7Clabel:CatCafe%7C43.196,141.001!markers=color:0xFF69B4%7Clabel:イメージグラス%7C43.195,141.001!markers=color:0xFF69B4%7Clabel:UngaPlus%7C43.193,141.000!markers=color:0xFF69B4%7Clabel:ゆず工房%7C43.193,141.002" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.3!2d140.992!3d43.196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b29c8f2b8e4d1%3A0x8e4b8f2b8e4b8f2b!2sOtaru+Canal!5e0!3m2!1szh-HK!2shk!4v1736000000000&markers=color:0xFF69B4%7Clabel:T%7C43.1755,140.9752%7Cmarkers=color:0xFF69B4%7Clabel:F%7C43.1992,140.9991%7Cmarkers=color:0xFF69B4%7Clabel:三角%7C43.1995,140.9998%7Cmarkers=color:0xFF69B4%7Clabel:堺町%7C43.1948,141.0012%7Cmarkers=color:0xFF69B4%7Clabel:LeTAO%7C43.1914,141.0074%7Cmarkers=color:0xFF69B4%7Clabel:運河%7C43.1982,141.0015%7Cmarkers=color:0xFF69B4%7Clabel:世壺屋%7C43.1971,141.0013%7Cmarkers=color:0xFF69B4%7Clabel:CHAFF%7C43.1991,140.9985%7Cmarkers=color:0xFF69B4%7Clabel:芸術村%7C43.1932,141.0021%7Cmarkers=color:0xFF69B4%7Clabel:MORAN%7C43.1941,141.0010%7Cmarkers=color:0xFF69B4%7Clabel:れんげ%7C43.1952,141.0014%7Cmarkers=color:0xFF69B4%7Clabel:CatCafe%7C43.1960,141.0012%7Cmarkers=color:0xFF69B4%7Clabel:イメージ%7C43.1950,141.0011%7Cmarkers=color:0xFF69B4%7Clabel:Unga%7C43.1930,141.0005%7Cmarkers=color:0xFF69B4%7Clabel:ゆず工房%7C43.1931,141.0020" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;text-align:center;">Day 2 小樽浪漫地圖（粉紅標記所有地點，可縮放點擊查看名稱♡）</p>
         </div>
         </div>`,
