--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@ function showDetail(day){
         </div>
 
         <div class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.3!2d140.992!3d43.196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b29c8f2b8e4d1%3A0x8e4b8f2b8e4b8f2b!2sOtaru+Canal!5e0!3m2!1szh-HK!2shk!4v1736000000000&markers=color:0xFF69B4%7Clabel:T%7C43.1755,140.9752%7Cmarkers=color:0xFF69B4%7Clabel:F%7C43.1992,140.9991%7Cmarkers=color:0xFF69B4%7Clabel:三角%7C43.1995,140.9998%7Cmarkers=color:0xFF69B4%7Clabel:堺町%7C43.1948,141.0012%7Cmarkers=color:0xFF69B4%7Clabel:LeTAO%7C43.1914,141.0074%7Cmarkers=color:0xFF69B4%7Clabel:運河%7C43.1982,141.0015%7Cmarkers=color:0xFF69B4%7Clabel:世壺屋%7C43.1971,141.0013%7Cmarkers=color:0xFF69B4%7Clabel:CHAFF%7C43.1991,140.9985%7Cmarkers=color:0xFF69B4%7Clabel:芸術村%7C43.1932,141.0021%7Cmarkers=color:0xFF69B4%7Clabel:MORAN%7C43.1941,141.0010%7Cmarkers=color:0xFF69B4%7Clabel:れんげ%7C43.1952,141.0014%7Cmarkers=color:0xFF69B4%7Clabel:CatCafe%7C43.1960,141.0012%7Cmarkers=color:0xFF69B4%7Clabel:イメージ%7C43.1950,141.0011%7Cmarkers=color:0xFF69B4%7Clabel:Unga%7C43.1930,141.0005%7Cmarkers=color:0xFF69B4%7Clabel:ゆず工房%7C43.1931,141.0020" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;text-align:center;">Day 2 小樽浪漫地圖（粉紅標記所有地點，可縮放點擊查看名稱♡）</p>
-        </div>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1B4UsqKi94CEqa9RnnvxqZo_gEzJ57dc&ehbc=2E312F" class="map-embed" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;text-align:center;">Day 2 小樽運河&天狗山展望台浪漫地圖（粉紅標記所有行程點、咖啡店與商店，可縮放點擊查看詳情♡）</p>
+</div>
         </div>`,
         
     3: `<div class="detail-day">
