--- a/index.html
+++ b/index.html
@@ -261,45 +261,45 @@ function showDetail(day){
         <a href="https://www.tv-tower.co.jp/en/" target="_blank" class="ticket-link">電視塔線上購票（建議提前）</a>
         <div class="links"><a href="https://www.google.com/maps/dir/New+Chitose+Airport/Sapporo+TV+Tower" target="_blank" class="location-link">Google Maps 路線</a></div></div>`,
 
-    2: `<div class="detail-day">
-        <div class="weather-box"><strong>1月31日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，輕雪，浪漫小樽日</div>
-        <div class="snow-box"><strong>即時雪況：</strong> 小樽運河積雪 50 cm，雪景浪漫（來源：Otaru旅遊網）</div>
-        <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/10/00/a1000055/img/basic/a1000055_main.jpg?20210222182701&q=80" class="hero-img" alt="小樽運河">
-        <h2>Day 2　小樽運河&天狗山展望台浪漫一日</h2>
-        <div class="step"><span class="time">10:00</span>　從Airbnb出發前往小樽（JR快速，約35分鐘）</div>
-        <div class="step"><span class="time">10:45</span>　抵達後參觀 <span class="location-link" onclick="panTo('船見阪')">船見阪</span>（經典陡坡雪景）</div>
-        <div class="step"><span class="time">11:00</span>　<span class="location-link" onclick="panTo('三角市場')">三角市場</span> 用午餐（新鮮海鮮丼或壽司）</div>
-        <div class="step"><span class="time">12:00</span>　前往 <span class="location-link" onclick="panTo('堺町通商店街')">堺町通商店街</span> 自由逛街</div>
-        <div class="step"><span class="time">13:30</span>　<span class="location-link" onclick="panTo('LeTAO')">LeTAO本店</span>（雙層起司蛋糕 + 買手信）</div>
-        <div class="step"><span class="time">14:30</span>　搭纜車上 <span class="location-link" onclick="panTo('天狗山展望台')">天狗山展望台</span>（俯瞰小樽全景）</div>
-        <div class="step"><span class="time">17:30</span>　下山返回 <span class="location-link" onclick="panTo('小樽運河')">小樽運河</span> 散步</div>
-        <div class="step"><span class="time">18:30</span>　<span class="meal">晚餐：<span class="location-link" onclick="panTo('小樽世壺屋')">小樽世壺屋</span>（高級懷石，需預約）</span></div>
-        <div class="step"><span class="time">20:00</span>　搭JR返回Airbnb</div>
-        <a href="https://tabelog.com/tw/hokkaido/A0106/A010601/1070911/" target="_blank" class="ticket-link">世壺屋預約（強烈建議提前1個月）</a>
-        <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Station" target="_blank" class="location-link">札幌 → 小樽路線</a></div>
+   2: `<div class="detail-day">
+    <div class="weather-box"><strong>1月31日天氣預測（歷史平均）：</strong> 高溫 -2°C / 低溫 -8°C，輕雪，浪漫小樽日</div>
+    <div class="snow-box"><strong>即時雪況：</strong> 小樽運河積雪 50 cm，雪景浪漫（來源：Otaru旅遊網）</div>
+    <img src="https://rimage.gnst.jp/livejapan.com/public/article/detail/a/10/00/a1000055/img/basic/a1000055_main.jpg?20210222182701&q=80" class="hero-img" alt="小樽運河">
+    <h2>Day 2　小樽運河&天狗山展望台浪漫一日</h2>
+    <div class="step"><span class="time">10:00</span>　從Airbnb出發前往小樽（JR快速，約35分鐘）</div>
+    <div class="step"><span class="time">10:45</span>　抵達後參觀 <a href="https://www.google.com/maps/search/?api=1&query=%E8%88%B9%E8%A6%8B%E5%9D%82+Otaru" target="_blank" class="location-link">船見阪</a>（經典陡坡雪景）</div>
+    <div class="step"><span class="time">11:00</span>　<a href="https://www.google.com/maps/search/?api=1&query=%E4%B8%89%E8%A7%92%E5%B8%82%E5%A0%B4+Otaru" target="_blank" class="location-link">三角市場</a> 用午餐（新鮮海鮮丼或壽司）</div>
+    <div class="step"><span class="time">12:00</span>　前往 <a href="https://www.google.com/maps/search/?api=1&query=%E5%A0%BA%E7%94%BA%E9%80%9A%E5%95%86%E5%BA%97%E8%A1%97+Otaru" target="_blank" class="location-link">堺町通商店街</a> 自由逛街</div>
+    <div class="step"><span class="time">13:30</span>　<a href="https://www.google.com/maps/search/?api=1&query=LeTAO+Otaru" target="_blank" class="location-link">LeTAO本店</a>（雙層起司蛋糕 + 買手信）</div>
+    <div class="step"><span class="time">14:30</span>　搭纜車上 <a href="https://www.google.com/maps/search/?api=1&query=%E5%A4%A9%E7%8B%97%E5%B1%B1%E5%B1%95%E6%9C%9B%E5%8F%B0+Otaru" target="_blank" class="location-link">天狗山展望台</a>（俯瞰小樽全景）</div>
+    <div class="step"><span class="time">17:30</span>　下山返回 <a href="https://www.google.com/maps/search/?api=1&query=%E5%B0%8F%E6%A8%BD%E9%81%8B%E6%B2%B3" target="_blank" class="location-link">小樽運河</a> 散步</div>
+    <div class="step"><span class="time">18:30</span>　<span class="meal">晚餐：<a href="https://www.google.com/maps/search/?api=1&query=%E5%B0%8F%E6%A8%BD%E4%B8%96%E5%A3%BA%E5%B1%8B" target="_blank" class="location-link">小樽世壺屋</a>（高級懷石，需預約）</span></div>
+    <div class="step"><span class="time">20:00</span>　搭JR返回Airbnb</div>
+    <a href="https://tabelog.com/tw/hokkaido/A0106/A010601/1070911/" target="_blank" class="ticket-link">世壺屋預約（強烈建議提前1個月）</a>
+    <div class="links"><a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Station" target="_blank" class="location-link">札幌 → 小樽路線</a></div>
 
-        <div class="place-list">
-            <h3>咖啡店（堺町通商店街附近推薦）</h3>
-            <ul>
-                <li><span class="location-link" onclick="panTo('Coffee House CHAFF')">Coffee House CHAFF</span> (12pm-6pm)</li>
-                <li><span class="location-link" onclick="panTo('小樽芸術村ミュージアムカフェ')">小樽芸術村ミュージアムカフェ</span> (10:30am-4pm)</li>
-                <li><span class="location-link" onclick="panTo('COFFEE STAND MORAN')">COFFEE STAND MORAN</span> (10am-6pm)</li>
-                <li><span class="location-link" onclick="panTo('れんげ洞')">れんげ洞</span> (1pm-9pm)</li>
-                <li><span class="location-link" onclick="panTo('Cat Cafe-Meow Legend')">Cat Cafe-Meow Legend</span> (10:30am-6pm)</li>
-            </ul>
-            <h3>商店（堺町通商店街附近推薦）</h3>
-            <ul>
-                <li><span class="location-link" onclick="panTo('イメージ・グラス')">イメージ・グラス</span> (10:30am-4:30pm)</li>
-                <li><span class="location-link" onclick="panTo('Unga Plus')">Unga Plus</span> (10am-6pm)</li>
-                <li><span class="location-link" onclick="panTo('硝子と雑貨のお店 ゆず工房')">硝子と雑貨のお店 ゆず工房</span></li>
-            </ul>
-        </div>
+    <div class="place-list">
+        <h3>咖啡店（堺町通商店街附近推薦）</h3>
+        <ul>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=Coffee+House+CHAFF+Otaru" target="_blank" class="location-link">Coffee House CHAFF</a> (12pm-6pm)</li>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=%E5%B0%8F%E6%A8%BD%E8%97%9D%E8%A1%93%E6%9D%91%E3%83%9F%E3%83%A5%E3%83%BC%E3%82%B8%E3%82%A2%E3%83%A0%E3%82%AB%E3%83%95%E3%82%A7+Otaru" target="_blank" class="location-link">小樽芸術村ミュージアムカフェ</a> (10:30am-4pm)</li>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=COFFEE+STAND+MORAN+Otaru" target="_blank" class="location-link">COFFEE STAND MORAN</a> (10am-6pm)</li>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=%E3%82%8C%E3%82%93%E3%81%92%E6%B4%9E+Otaru" target="_blank" class="location-link">れんげ洞</a> (1pm-9pm)</li>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=Cat+Cafe+Meow+Legend+Otaru" target="_blank" class="location-link">Cat Cafe-Meow Legend</a> (10:30am-6pm)</li>
+        </ul>
+        <h3>商店（堺町通商店街附近推薦）</h3>
+        <ul>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=%E3%82%A4%E3%83%A1%E3%83%BC%E3%82%B8%E3%83%BB%E3%82%B0%E3%83%A9%E3%82%B9+Otaru" target="_blank" class="location-link">イメージ・グラス</a> (10:30am-4:30pm)</li>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=Unga+Plus+Otaru" target="_blank" class="location-link">Unga Plus</a> (10am-6pm)</li>
+            <li><a href="https://www.google.com/maps/search/?api=1&query=%E7%A1%9D%E5%AD%90%E3%81%A8%E9%9B%91%E8%B2%A8%E3%81%AE%E3%81%8A%E5%BA%97+%E3%82%86%E3%81%9A%E5%B7%A5%E6%88%BF+Otaru" target="_blank" class="location-link">硝子と雑貨のお店 ゆず工房</a></li>
+        </ul>
+    </div>
 
-        <div class="map-container">
-            <iframe id="otaru-map" src="https://www.google.com/maps/d/u/0/embed?mid=1B4UsqKi94CEqa9RnnvxqZo_gEzJ57dc&ehbc=2E312F" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;text-align:center;">點擊上方地點名稱，地圖會自動移到該位置♡</p>
-        </div>
-        </div>`,
+    <div class="map-container">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1B4UsqKi94CEqa9RnnvxqZo_gEzJ57dc&ehbc=2E312F" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p style="font-size:0.9rem;color:#666;margin-top:0.5rem;text-align:center;">Day 2 小樽浪漫地圖（粉紅標記所有行程點、咖啡店與商店，可縮放點擊標記查看詳情♡）</p>
+    </div>
+    </div>`,
         
     3: `<div class="detail-day">
         <div class="weather-box"><strong>2月1日天氣預測（歷史平均）：</strong> 高溫 -3°C / 低溫 -9°C，多雲轉晴</div>
