--- a/index.html
+++ b/index.html
@@ -91,23 +91,30 @@
         <div class="info-card">
             <h2>航班資訊</h2>
             <div class="info-item"><span class="info-label">訂單號：</span> NE2512180117514479</div>
-            <div class="info-item"><span class="info-label">去程（香港 → 札幌）：</span> 1月30日 HX690　08:35AM - 14:20PM（新千歲機場）</div>
+            <div class="info-item"><span class="info-label">去程（香港 → 札幌）：</span> 1月30日 HX690　08:35AM - 14:20PM（<a href="https://www.google.com/maps/search/?api=1&query=%E6%96%B0%E5%8D%83%E6%AD%B2%E6%A9%9F%E5%A0%B4" target="_blank">新千歲機場</a>）</div>
             <div class="info-item"><span class="info-label">座位：</span> Carson 34K　｜　Riley 34H</div>
-            <div class="info-item"><span class="info-label">回程（札幌 → 香港）：</span> 2月5日 HX691　15:20PM - 20:40PM</div>
+            <div class="info-item"><span class="info-label">回程（札幌 → 香港）：</span> 2月5日 HX691　15:20PM - 20:40PM（<a href="https://www.google.com/maps/search/?api=1&query=%E6%96%B0%E5%8D%83%E6%AD%B2%E6%A9%9F%E5%A0%B4" target="_blank">新千歲機場</a>）</div>
             <div class="info-item"><span class="info-label">座位：</span> Carson 34K　｜　Riley 34H</div>
             <div class="info-item"><span class="info-label">每人價格：</span> HK$3,296</div>
         </div>
 
         <div class="info-card">
             <h2>住宿資訊（Airbnb）</h2>
-            <div class="info-item"><span class="info-label">住宿名稱：</span> Grandir Sapporo</div>
-            <div class="info-item"><span class="info-label">地址：</span> Kita 11 Johigashi-1-8 Chome Higashi Ward, Sapporo, Hokkaido 065-0011</div>
-            <div class="info-item"><span class="info-label">距離札幌站：</span> 步行約5分鐘</div>
+            <div class="info-item"><span class="info-label">住宿名稱：</span> <a href="https://www.google.com/maps/search/?api=1&query=Grandir+Sapporo+Kita+11+Johigashi-1-8+Chome+Higashi+Ward+Sapporo+Hokkaido+065-0011" target="_blank">Grandir Sapporo</a></div>
+            <div class="info-item"><span class="info-label">地址：</span> <a href="https://www.google.com/maps/search/?api=1&query=Kita+11+Johigashi-1-8+Chome+Higashi+Ward+Sapporo+Hokkaido+065-0011" target="_blank">Kita 11 Johigashi-1-8 Chome Higashi Ward, Sapporo, Hokkaido 065-0011</a></div>
+            <div class="info-item"><span class="info-label">距離札幌站：</span> 步行約5分鐘（<a href="https://www.google.com/maps/dir/Kita+11+Johigashi-1-8+Chome+Higashi+Ward+Sapporo/Sapporo+Station" target="_blank">查看步行路線</a>）</div>
             <div class="info-item"><span class="info-label">Check-in 連結：</span> <a href="https://msisys.com/shukuhaku/check_in/HMRJN9C4DT" target="_blank">https://msisys.com/shukuhaku/check_in/HMRJN9C4DT</a></div>
             <div class="info-item"><span class="info-label">Confirmation Code：</span> HMRJN9C4DT</div>
             <div class="info-item"><span class="info-label">網站：</span> <a href="https://statics.teams.cdn.office.net/evergreen-assets/safelinks/2/atp-safelinks.html" target="_blank">Airbnb 連結</a></div>
         </div>
 
+        <div class="info-card">
+            <h2>保險資訊</h2>
+            <div class="info-item"><span class="info-label">保險公司：</span> Zurich</div>
+            <div class="info-item"><span class="info-label">每人保費：</span> HK$238</div>
+        </div>
+    </div>
+</div>
         <div class="info-card">
             <h2>保險資訊</h2>
             <div class="info-item"><span class="info-label">保險公司：</span> Zurich</div>
