--- a/index.html
+++ b/index.html
@@ -109,12 +109,21 @@
         </div>
 
         <div class="info-card">
-            <h2>保險資訊</h2>
-            <div class="info-item"><span class="info-label">保險公司：</span> Zurich</div>
-            <div class="info-item"><span class="info-label">每人保費：</span> HK$238</div>
+            <h2>JR 火車時刻表（主要路線）</h2>
+            <div class="info-item"><strong>新千歲機場 ↔ 札幌站（Rapid Airport 快速列車）</strong><br>
+                約每15分鐘一班，全程約37分鐘，成人單程 ¥1,150<br>
+                <a href="https://www.jrhokkaido.co.jp/global/english/train/airport.html" target="_blank">官方時刻表（英文）</a> ｜ 
+                <a href="https://www.hyperdia.com/" target="_blank">Hyperdia 查詢</a> ｜ 
+                <a href="https://www.google.com/maps/dir/New+Chitose+Airport/Sapporo+Station" target="_blank">路線圖</a>
+            </div>
+            <div class="info-item"><strong>札幌站 ↔ 小樽站（快速列車）</strong><br>
+                約每15-30分鐘一班，全程約32-35分鐘，成人單程 ¥750<br>
+                <a href="https://www.jrhokkaido.co.jp/global/english/train/" target="_blank">JR北海道官方</a> ｜ 
+                <a href="https://www.google.com/maps/dir/Sapporo+Station/Otaru+Station" target="_blank">路線圖</a>
+            </div>
+            <div class="info-item"><strong>推薦 App：</strong> Japan Travel by NAVITIME / Google Maps / Hyperdia（可即時查詢延誤）</div>
         </div>
-    </div>
-</div>
+
         <div class="info-card">
             <h2>保險資訊</h2>
             <div class="info-item"><span class="info-label">保險公司：</span> Zurich</div>
